--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Experience adventure and comfort at Stamps Backpackers Hostel & Tours in Chiang Mai. Social atmosphere, comfortable dorms, daily tours, and a prime location.">
     <meta name="keywords" content="Stamps Backpackers, Hostel Chiang Mai, Backpackers Chiang Mai, Tours Chiang Mai, Budget Accommodation Chiang Mai, Social Hostel Chiang Mai">
     <title>Stamps Backpackers Hostel & Tours Chiang Mai</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
